<resources>
    <string name="app_name">ArtisansFinal</string>
    <string-array name="intents">
        <item></item>
        <item>USER</item>
        <item>ARTISAN</item>
    </string-array>

    <string name="app_name1">navigation</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category: </string>
    <string-array name="searchFilter">
        <item>Product</item>
        <item>Artisan</item>
    </string-array>
    <string-array name="sortChoice">
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
        <item>Rating: Low to High</item>
        <item>Rating: High to Low</item>
    </string-array>
    <string-array name="choice">
        <item>Product</item>
        <item>Artisan</item>
    </string-array>
    <string name="sortBy">Sort By:</string>
    <string-array name="skills">
        <item>None</item>
        <item>Saree</item>
        <item>Shawl</item>
        <item>Garland</item>
        <item>Bracelet</item>
        <item>Shirt</item>
        <item>Pottery</item>
        <item>Glass Painting</item>
        <item>Toys</item>
    </string-array>


    <string name="Artisan">Artisan</string>
    <string name="Welcome">Welcome</string>
    <string name="Enter_the_email">Email</string>
    <string name="Contact_no">Contact Number*</string>
    <string name="UID">Unique Identification Number</string>
    <string name="Pincode">Pincode*</string>
    <string name="Username">Username*</string>
    <string name="Enter_password">Password</string>
    <string name="Registration">Register</string>
    <string name="skillset">Select Skillset</string>
    <string name="titleProductRegistration">Product Registration</string>
    <string name="productName">Product Name</string>
    <string name="browseImage">Browse Image</string>
    <string name="uploadImage">Upload Image</string>
    <string name="productDescription">Description</string>
    <string name="productPrice">Product Price</string>
    <string name="VerifyOTP">Verify OTP</string>
    <string name="enter_otp">Enter OTP*</string>
    <string name="title_activity_common_login_tabbed">common_login_tabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_user_product_page_tabbed">UserProductPageTabbedActivity</string>
    <string name="slide1description">Select a category to\nsearch for products</string>
    <string name="slide2reviewdescription">Read various\n reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_product_page_tabbed1">UserProductPageTabbed1Activity</string>

    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin"</string>

    <string name="rupee">"\u20B9 "</string>
    <string name="title_activity_user_home_page2">UserHomePage2Activity</string>
</resources>
