<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbdefb"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        tools:context=".CommonLoginActivityTabbed">


        <TextView
            android:id="@+id/app_name_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/Artisan"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_id"
            app:layout_constraintVertical_bias="0.012" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInput_ContactNo_id"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_id"
            app:layout_constraintVertical_bias="0.088">

            <EditText
                android:id="@+id/edit_contact_no_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Contact_no"
                android:inputType="phone"
                android:paddingBottom="16dp"
                android:textColorLink="@color/black" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInput_address_id"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInput_ContactNo_id"
            app:layout_constraintVertical_bias="0.004">


            <EditText
                android:id="@+id/edit_address_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Pincode"
                android:inputType="number"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textColorLink="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInput_username_id"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInput_address_id"
            app:layout_constraintVertical_bias="0.024">

            <EditText
                android:id="@+id/edit_username_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Username"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:textColorLink="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_main_TextInput_OTP"
            android:layout_width="203dp"
            android:layout_height="66dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="184dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInput_username_id"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/activity_main_EditText_OTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_otp"
                android:inputType="numberPassword"
                android:paddingBottom="16dp"
                android:textColorLink="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Registration_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border"
            android:backgroundTint="?attr/colorButtonNormal"
            android:onClick="goToProductRegistrationPage"
            android:text="@string/Registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_TextInput_OTP"
            app:layout_constraintVertical_bias="0.466" />

        <Button
            android:id="@+id/products_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:backgroundTint="?attr/colorButtonNormal"
            android:text="@string/VerifyOTP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/activity_main_TextInput_OTP"
            app:layout_constraintTop_toBottomOf="@+id/TextInput_username_id"
            app:layout_constraintVertical_bias="0.073" />

        <Button
            android:id="@+id/activity_main_OTP_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:backgroundTint="?attr/colorButtonNormal"
            android:text="Send OTP"
            app:layout_constraintBottom_toTopOf="@+id/TextInput_address_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/TextInput_ContactNo_id"
            app:layout_constraintTop_toBottomOf="@+id/welcome_id"
            app:layout_constraintVertical_bias="0.875" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>