<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#bbdefb"
    android:id="@+id/product_registration_ll">

    <LinearLayout
        android:id="@+id/product_registration_ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:id="@+id/product_page_rl_product_image"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/product_page_iv_product_image"
                android:layout_width="fill_parent"
                android:layout_height="350dp"
                android:src="@mipmap/insertimagehere" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/product_page_fab_insert_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:clickable="true"
                android:tint="@android:color/white"
                app:backgroundTint="@color/deep_orange_500"
                app:fabSize="normal"
                app:layout_anchor="@+id/product_page_iv_product_image"
                app:rippleColor="@android:color/white"
                app:srcCompat="@drawable/ic_add"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/product_page_spinner_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/product_page_tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"/>

            <Spinner
                android:id="@+id/product_registration_spinner_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/skills"
                android:layout_marginStart="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            android:layout_margin="5dp"
            app:hintTextAppearance="@style/TextLabel"
            android:padding="1dp">

            <EditText
                android:id="@+id/product_registration_et_product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/productName"
                android:inputType="text"
                android:textColorLink="@color/colorPrimaryText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            android:layout_margin="5dp"
            app:hintTextAppearance="@style/TextLabel"
            android:padding="1dp">

            <EditText
                android:id="@+id/product_registration_et_product_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/productDescription"
                android:inputType="textMultiLine|text|textCapSentences"
                android:textColorLink="@color/colorPrimaryText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            android:layout_margin="5dp"
            app:hintTextAppearance="@style/TextLabel"
            android:padding="1dp">

            <EditText
                android:id="@+id/product_registration_et_product_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/productPrice"
                android:inputType="number"
                android:textColorLink="@color/colorPrimaryText"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/product_registration_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border2"
            android:text="@string/Registration"
            android:layout_gravity="end"/>


    </LinearLayout>
<!--    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductRegistrationActivity"
        android:id="@+id/product_registration_nsv_cv">

        <TextView
            android:id="@+id/product_registration_tv_registration_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/titleProductRegistration"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/product_registration_spinner_categories"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/skills"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_tv_registration_display"
            app:layout_constraintVertical_bias="0.016" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_spinner_categories"
            app:layout_constraintVertical_bias="0.01999998">

            <EditText
                android:id="@+id/product_registration_et_product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/productName"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorLink="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/product_registration_iv_product_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/sym_def_app_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_til_text_input_product_name"
            app:layout_constraintVertical_bias="0.08" />

        <Button
            android:id="@+id/product_registration_button_browse_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border2"
            android:backgroundTint="?attr/colorButtonNormal"

            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/browseImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_iv_product_image"
            app:layout_constraintVertical_bias="0.07999998" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_button_browse_image"
            app:layout_constraintVertical_bias="0.13999999">

            <EditText
                android:id="@+id/product_registration_et_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/productDescription"
                android:inputType="text"
                android:lines="3"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_registration_til_text_input_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="#000000"
            app:helperTextEnabled="true"
            app:hintTextAppearance="@style/TextLabel"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_til_text_input_product_description"
            app:layout_constraintVertical_bias="0.100000024">

            <EditText
                android:id="@+id/product_registration_et_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColorLink="@color/colorPrimaryText"
                android:ems="10"
                android:hint="@string/productPrice"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/product_registration_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border2"
            android:backgroundTint="?attr/colorButtonNormal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/Registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_til_text_input_product_price"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/product_registration_spinner_categories"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_registration_tv_registration_display"
            app:layout_constraintVertical_bias="0.015" />


    </android.support.constraint.ConstraintLayout>-->
</ScrollView>